WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
163336
CRASH at WebCore::SourceBuffer::removeCodedFrames + 37
https://bugs.webkit.org/show_bug.cgi?id=163336
Summary
CRASH at WebCore::SourceBuffer::removeCodedFrames + 37
Jer Noble
Reported
2016-10-12 09:25:37 PDT
CRASH at WebCore::SourceBuffer::removeCodedFrames + 37
Attachments
Patch
(1.50 KB, patch)
2016-10-12 09:28 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Patch
(5.26 KB, patch)
2016-10-12 09:44 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2016-10-12 09:28:12 PDT
Created
attachment 291362
[details]
Patch
Jer Noble
Comment 2
2016-10-12 09:29:01 PDT
rdar://problem/28657493
mitz
Comment 3
2016-10-12 09:30:31 PDT
Comment on
attachment 291362
[details]
Patch Is there a way to make a regression test for this?
Jer Noble
Comment 4
2016-10-12 09:31:26 PDT
(In reply to
comment #3
)
> Comment on
attachment 291362
[details]
> Patch > > Is there a way to make a regression test for this?
Good point, will do.
Jer Noble
Comment 5
2016-10-12 09:44:52 PDT
Created
attachment 291363
[details]
Patch
WebKit Commit Bot
Comment 6
2016-10-13 11:15:56 PDT
Comment on
attachment 291363
[details]
Patch Clearing flags on attachment: 291363 Committed
r207294
: <
http://trac.webkit.org/changeset/207294
>
WebKit Commit Bot
Comment 7
2016-10-13 11:16:01 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug