CRASH at WebCore::SourceBuffer::removeCodedFrames + 37 https://bugs.webkit.org/show_bug.cgi?id=163336

Reviewed by Alex Christensen.

Source/WebCore:

Test: media/media-source/media-source-remove-crash.html

A null-deref crash can occur if a SourceBuffer is removed from a MediaSource after
SourceBuffer.remove() is called, but before the removeTimer is fired.

* Modules/mediasource/SourceBuffer.cpp:
(WebCore::SourceBuffer::removeTimerFired):

LayoutTests:

* media/media-source/media-source-remove-crash-expected.txt: Added.
* media/media-source/media-source-remove-crash.html: Added.


Canonical link: https://commits.webkit.org/181219@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@207294 268f45cc-cd09-0410-ab3c-d52691b4dbfc